set sideEffects to false

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"type": "module",
+	"sideEffects": false,
 	"name": "@intrnl/cssom-utils",
 	"description": "Utilities for working with CSS in JS",
 	"version": "0.1.0",
